# gazebo_ros_battery

./: CMakeLists.txt  README.md  package.xml
config/: dashboard.perspective
include/gazebo_ros_battery/: gazebo_ros_battery.h
launch/: rqt.launch  simulation.launch
params/: G24B4.yaml  battery_config.py
src/: gazebo_ros_battery.cpp
srv/: Reset.srv  SetCharge.srv  SetTemperature.srv
urdf/: test.xacro
xacro/: battery.xacro
