<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_battery</name>
  <version>1.0.0</version>
  <description>General nonlinear battery simulation plugin</description>

  <author email="marton@nowtech.hu">Marton Juhasz</author>
  <author email="gergely@nowtech.hu">Gergely Gyebroszki</author>
  <maintainer email="marton@nowtech.hu">Marton Juhasz</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>gazebo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>
  <depend>urdf</depend>
  <depend>rosconsole</depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
